--- a/index.html
+++ b/index.html
@@ -28,55 +28,59 @@
             </tr>
             <tr>
                 <td>Malla</td>
-                <td><a href="2-malla-Bootstrap.html">Malla</a></td>
+                <td><a href="2-malla-Bootstrap.html">Malla Bootstrap</a></td>
             </tr>
             <tr>
                 <td>Malla Responsiva</td>
-                <td><a href="3-malla-Responsiva.html">Malla</a></td>
+                <td><a href="3-malla-Responsiva.html">Malla Responsiva</a></td>
             </tr>
             <tr>
                 <td>Malla Responsiva ExtraPequeño</td>
-                <td><a href="4-malla-Responsiva-extraPequeno.html">Malla</a></td>
+                <td><a href="4-malla-Responsiva-extraPequeno.html">Malla Responsiva ExtraPequeño</a></td>
             </tr>
             <tr>
                 <td>Alineamiento</td>
-                <td><a href="5-alineamiento.html">Malla</a></td>
+                <td><a href="5-alineamiento.html">Alineamiento</a></td>
             </tr>
             <tr>
                 <td>Ejercicio 2 Construccion</td>
-                <td><a href="6-ejercicio2-construccion.html">Malla</a></td>
+                <td><a href="6-ejercicio2-construccion.html">Ejercicio 2 Construccion</a></td>
             </tr>
             <tr>
                 <td>Margenes Padding</td>
-                <td><a href="6-margenes-padding.html">Malla</a></td>
+                <td><a href="6-margenes-padding.html">Margenes Padding</a></td>
             </tr>
             <tr>
                 <td>Ejercicio 1</td>
-                <td><a href="7-ejercicio1.html">Malla</a></td>
+                <td><a href="7-ejercicio1.html">Ejercicio 1</a></td>
             </tr>
             <tr>
                 <td>Formularios</td>
-                <td><a href="8-formularios.html">Malla</a></td>
+                <td><a href="8-formularios.html">Formularios</a></td>
             </tr>
             <tr>
                 <td>Formularios Grid</td>
-                <td><a href="9-formularios-grid.html">Malla</a></td>
+                <td><a href="9-formularios-grid.html">Formularios Grid</a></td>
             </tr>
             <tr>
                 <td>Formulario Horizontal</td>
-                <td><a href="11-form-horizontal.html">Malla</a></td>
+                <td><a href="11-form-horizontal.html">Formulario Horizontal</a></td>
             </tr>
             <tr>
                 <td>Alertas</td>
-                <td><a href="12-alertas.html">Malla</a></td>
+                <td><a href="12-alertas.html">Alertas</a></td>
             </tr>
             <tr>
                 <td>Modales</td>
-                <td><a href="13-modal.html">Malla</a></td>
+                <td><a href="13-modal.html">Modales</a></td>
             </tr>
             <tr>
                 <td>Navbar</td>
-                <td><a href="14-navbar.html">Malla</a></td>
+                <td><a href="14-navbar.html">Navbar</a></td>
+            </tr>
+            <tr>
+                <td>Carousel</td>
+                <td><a href="15-carousel.html">Carousel</a></td>
             </tr>
                             
             </table>
