--- a/index.html
+++ b/index.html
@@ -82,7 +82,14 @@
                 <td>Carousel</td>
                 <td><a href="15-carousel.html">Carousel</a></td>
             </tr>
-                            
+            <tr>
+                <td>Cards</td>
+                <td><a href="16-Cards.html">Cards</a></td>
+            </tr>
+            <tr>
+                <td>Galeria</td>
+                <td><a href="17-galeria/">Galeria</a></td>
+            </tr>                
             </table>
     </div>
     <!-- Optional JavaScript -->
