--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
             <tr>
                 <td>Galeria</td>
                 <td><a href="17-galeria/">Galeria</a></td>
-            </tr>                
+            </tr>   
+            <tr>
+                <td>Acordeon</td>
+                <td><a href="18-acordeon.html">Acordeon</a></td>
+            </tr>             
             </table>
     </div>
     <!-- Optional JavaScript -->
